--- a/app/src/main/res/layout/activity_perform_login.xml
+++ b/app/src/main/res/layout/activity_perform_login.xml
@@ -7,37 +7,63 @@
     android:padding="15dp"
     tools:context=".perform_login">
 
+    <Button
+        android:id="@+id/btn_login_withotp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/black"
+        android:text="Login with otp"
+        android:textStyle="bold"
+        app:cornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="6:1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline80"
+        app:layout_constraintStart_toStartOf="@+id/guideline79"
+        app:layout_constraintTop_toBottomOf="@+id/textView33"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/textView33"
         style="@android:style/TextAppearance.DeviceDefault.Large"
+        android:layout_width="335dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="88dp"
+        android:fontFamily="sans-serif-black"
+        android:text="We've detected an existing account, please choose a way to sign in."
+        android:textColor="#272626"
+        app:layout_constraintEnd_toStartOf="@+id/guideline80"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="@+id/guideline79"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline79"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:text="Enter Your Email"
-        android:textColor="#272626"
-        app:layout_constraintBottom_toTopOf="@+id/email_login_txt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.851" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/email_login_txt"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline80"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95" />
+
+    <Button
+        android:id="@+id/btn_login_withpassword"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:drawablePadding="10dp"
-        android:hint="Enter your email"
-        android:paddingStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/black"
+        android:text="Login with password"
+        android:textStyle="bold"
+        app:cornerRadius="30dp"
         app:layout_constraintDimensionRatio="6:1"
-        app:layout_constraintEnd_toStartOf="@+id/guideline45"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline46"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline80"
+        app:layout_constraintStart_toStartOf="@+id/guideline79"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login_withotp" />
 
     <ProgressBar
         android:id="@+id/performlogin_progressbar"
@@ -54,66 +80,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.461" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/password_login_txt"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="10dp"
-        android:hint="Enter your password"
-        android:paddingStart="10dp"
-        android:password="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="6:1"
-        app:layout_constraintEnd_toStartOf="@+id/guideline45"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline46"
-        app:layout_constraintTop_toBottomOf="@+id/email_login_txt"
-        app:layout_constraintVertical_bias="0.2" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline46"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline45"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95" />
-
-    <Button
-        android:id="@+id/btn_perform_login"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:backgroundTint="#7A7979"
-        android:text="Login"
-        android:textStyle="bold"
-        app:cornerRadius="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="6:1"
-        app:layout_constraintEnd_toStartOf="@+id/guideline45"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/guideline46"
-        app:layout_constraintTop_toBottomOf="@+id/password_login_txt"
-        app:layout_constraintVertical_bias="0.054" />
-
-    <TextView
-        android:id="@+id/textView18"
-        style="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:text="Enter Your Password"
-        android:textColor="#272626"
-        app:layout_constraintBottom_toTopOf="@+id/password_login_txt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_login_txt"
-        app:layout_constraintVertical_bias="0.583" />
 </androidx.constraintlayout.widget.ConstraintLayout>
