--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="Enter Your Email"
+        android:text="Enter Your Email(optional)"
         android:textColor="#272626"
         app:layout_constraintBottom_toTopOf="@+id/email_signup"
         app:layout_constraintEnd_toEndOf="parent"
