--- a/app/src/main/res/layout/activity_phone_otp_enter.xml
+++ b/app/src/main/res/layout/activity_phone_otp_enter.xml
@@ -60,7 +60,7 @@
         android:id="@+id/phone_number_phone"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginBottom="512dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_phone"
         android:drawablePadding="10dp"
@@ -69,9 +69,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="6:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline82"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline81"
-        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker_phone_otp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker_phone_otp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline82"
