--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -149,6 +149,7 @@
         android:drawableStart="@drawable/ic_phone"
         android:drawablePadding="10dp"
         android:hint="Enter your phone"
+        android:inputType="numberSigned"
         android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
         app:layout_constraintDimensionRatio="6:1"
