--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -29,6 +29,7 @@
         android:fontFamily="sans-serif-black"
         android:text="Enter Your Password"
         android:textColor="#272626"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/password_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -77,6 +78,7 @@
         android:hint="Enter your password"
         android:paddingStart="10dp"
         android:password="true"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="6:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline49"
