--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -156,7 +156,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline36"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline38"
-        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker_phone_otp"
+        app:layout_constraintTop_toBottomOf="@+id/countryCodePicker"
         app:layout_constraintVertical_bias="1.0" />
 
     <com.shobhitpuri.custombuttons.GoogleSignInButton
