--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -9,7 +9,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="bottom"
     android:layout_gravity="bottom"
     app:umanoShadowHeight="4dp"
-    app:umanoScrollableView="@id/slide_up_view"
+    app:umanoScrollableView="@+id/slide_up_view"
     app:umanoPanelHeight="0dp"
     android:id="@+id/home_fragment"
     app:umanoDragView="@id/sliding_drag"
